# sentinel

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-main-2026-04-18.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md  commitlint.config.js  pyproject.toml  release-please-config.json
.cursor/: BUGBOT.md  MCP.md  mcp.json
.cursor/rules/: python-backend.mdc  security.mdc  sentinel-standards.mdc  typescript-frontend.mdc
.github/: branch-protection.json  pull_request_template.md  zap-rules.tsv
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/scripts/: audit_schema_guard.py  test_audit_schema_guard.py
.github/workflows/: audit-schema-guard.yml  build.yml  ci.yml  detections-validate.yml  e2e-full.yml  e2e-smoke.yml  integration.yml  lint.yml  llm-gateway-eval.yml  llm-gateway-redteam.yml  lockfile-verify.yml  merkle-root-publish.yml  release-please.yml  rust.yml  sbom.yml  security.yml  typecheck.yml  unit.yml
.team/specs/: 2026-05-20-work-review-plan.md
.team/standup/: 2026-06-03-kai.md  2026-06-04-claude.md  2026-06-04-kai.md
.team/tickets/: T-032-xai-audit-trail-consolidation-review.md
docs/: show-hn-draft.md  watch-test-roster.md
dragon-scale-core/: .dockerignore  .env.example  Makefile  SETUP.md  TROUBLESHOOTING.md  check_dependencies.py  docker-compose.prod.yml  docker-compose.yml  dragonscaleenv.example  init.sql  install.sh  readme.md
dragon-scale-core/agent/: Dockerfile  agent.py  install.sh  profile_loader.py  requirements.txt
dragon-scale-core/backend/: Makefile  audit_logger.py  auth_middleware.py  conftest.py  metrics.py  observability.py  pytest.ini  resilience.py  secrets_manager.py  tenant_middleware.py
dragon-scale-core/docs/: API.md  ARCHITECTURE-DESIGN-DEVELOPMENT.md  CONTAMINATION-POLICY.md  DRL-ALIGNMENT.md  EXTERNAL-TESTING.md  IMPRESSIONS.md  MODEL-RED-TEAM.md  RISK-TIERS.md  SPECIFICATIONS.md  api-reference.md  architecture.md  compliance-readiness.md  deployment-guide.md  disaster-recovery.md  ml-models.md  operations.md  scaling-guide.md  security.md
dragon-scale-core/scripts/: boot.sh  integration_test.py
dragon-scale-core/sdk/: README.md  __init__.py  client.py  detectors.py  exceptions.py  models.py  pyproject.toml
dragon-scale-core/tests/: conftest.py
dragon-scale-core/training/: README.md  __init__.py  aws-setup.sh  check_trained.sh  data_loader.py  download_datasets.py  download_datasets.sh  ec2-add-swap.sh  ec2-downgrade-to-t3medium.sh  ec2-provision.sh  ec2-setup.sh  inference.py  model_registry.py  pull-full-dragon-scale.sh  pull-models.sh  refresh-sg-ssh.sh  requirements.txt  run_local_training.sh  run_training.sh  setup_training_env.sh  sync-from-dragon-scale.sh  sync-from-senti.sh  train_all.py  validate_models.py
scripts/: apply-branch-protection.sh  fresh_db_check.sh
scripts/watchtest/: QUICKSTART.txt  README-watchtest.md  setup.ps1  uninstall.ps1
sentinel-core/: .dockerignore  .env  .env.example  IMPROVEMENTS.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  SETUP.md  TROUBLESHOOTING.md  check_dependencies.py  docker-compose.ci.yml  docker-compose.e2e.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  install.sh  readme.md  sentinelenv  sentinelenv.example
sentinel-core/agent/: Dockerfile  agent.py  install.sh  profile_loader.py  requirements.txt
sentinel-core/backend/: .coveragerc  Makefile  audit_logger.py  audit_merkle.py  auth_middleware.py  conftest.py  metrics.py  observability.py  pytest.ini  requirements-test.txt  resilience.py  secret_crypto.py  secrets_manager.py  tenant_middleware.py
sentinel-core/detections/: README.md  detections.config.yaml
sentinel-core/docs/: API.md  ARCHITECTURE-DESIGN-DEVELOPMENT.md  CONTAMINATION-POLICY.md  DB-MIGRATION-DRIFT-AUDIT.md  DRL-ALIGNMENT.md  EXTERNAL-TESTING.md  IMPRESSIONS.md  MODEL-RED-TEAM.md  RISK-TIERS.md  SPECIFICATIONS.md  STATUS-AND-NEXT-STEPS.md  api-reference.md  architecture.md  audit-ledger-activation.md  compliance-readiness.md  deployment-guide.md  detections.md  disaster-recovery.md  enforcement.md  ml-models.md  operations.md  scaling-guide.md  security.md  xdp-bridge-network-verification.md
sentinel-core/reverse-proxy/: nginx.conf
sentinel-core/scripts/: boot.sh  encrypt_auth_secrets.py  fresh_db_check.sh  integration_test.py  migrate_audit_redis_to_pg.py  publish_audit_root.py  runtime_role_isolation_check.sh  validate_compose_security.py  validate_detections.py  verify_audit_chain.py  verify_lockfiles.py
sentinel-core/sdk/: README.md  __init__.py  client.py  detectors.py  exceptions.py  models.py  pyproject.toml
sentinel-core/tests/: conftest.py
sentinel-core/training/: README.md  __init__.py  aws-setup.sh  (+21 more)
src/: lib.rs  main.rs
templates/: blockpage.html
(+871 files in other folders)
