[package]
name = "sentinel"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/MuzeenMir/sentinel"
description = "Open-source DNS shield for Windows."
authors = ["Muzeen Mir <roodynicole833@gmail.com>"]

[[bin]]
name = "sentinel"
path = "src/main.rs"

[lib]
name = "sentinel"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync"] }
# rustls-tls keeps the build portable on Windows + Linux CI without OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
