[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-scale-sdk"
version = "0.1.0"
description = "Python SDK for the DRAGON_SCALE AI-powered security platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "DRAGON_SCALE Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/dragon-scale-security/dragon-scale"
Documentation = "https://docs.dragon-scale-security.io/sdk"
Repository = "https://github.com/dragon-scale-security/dragon-scale"

[tool.setuptools.packages.find]
include = ["sdk*"]
