[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-sdk"
version = "0.1.0"
description = "Python SDK for the SENTINEL AI-powered security platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SENTINEL Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/sentinel-security/sentinel"
Documentation = "https://docs.sentinel-security.io/sdk"
Repository = "https://github.com/sentinel-security/sentinel"

[tool.setuptools.packages.find]
include = ["sdk*"]
